# gemini-bidirectional-audio-streaming

./: README.md
live-api/backend/: main.py  pyproject.toml
live-api/frontend/app/: device.ts  liveMediaManager.ts
live-api/frontend/app/routes/: _index.tsx
speech-to-text-to-speech/backend/: client.py  genai.py  main.py  pyproject.toml  speechtotext.py  texttospeech.py  websocket.py
speech-to-text-to-speech/frontend/: pnpm-lock.yaml
speech-to-text-to-speech/frontend/app/: pcmProcessor.ts
speech-to-text-to-speech/frontend/app/routes/: _index.tsx
